fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/Lab_Participant__c.object-meta.xml
<CustomObject>
    <label>Lab Participant</label>
    <nameField>
        <label>Lab Participant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>