fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Add_me_to_the_mailing_list__c.field-meta.xml
<CustomField>
    <fullName>Add_me_to_the_mailing_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add me to the mailing list</label>
    <type>Checkbox</type>
</CustomField>