fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hospital ED/ICU/Rapid Response/Flight/Other</fullName>
            </value>
            <value>
                <fullName>EMS/Prehospital -  Ground or Air Ambulance</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology/Oncology/Pathology</fullName>
            </value>
            <value>
                <fullName>Anesthesia/Pain Management</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>