fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Lab Participants</relationshipLabel>
    <relationshipName>Lab_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>