fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Airway</label>
    <type>Checkbox</type>
</CustomField>