fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Attended_EZIO__c.field-meta.xml
<CustomField>
    <fullName>Attended_EZIO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended EZIO</label>
    <type>Checkbox</type>
</CustomField>