fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Attended_Hemorrhage__c.field-meta.xml
<CustomField>
    <fullName>Attended_Hemorrhage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Hemorrhage</label>
    <type>Checkbox</type>
</CustomField>