fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Atteneded_Interventional__c.field-meta.xml
<CustomField>
    <fullName>Atteneded_Interventional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atteneded Interventional</label>
    <type>Checkbox</type>
</CustomField>