fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Auto_Approve_All_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_All_Attendees__c</fullName>
    <formula>Lab__r.auto_approve_all_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Approve All Attendees</label>
    <type>Checkbox</type>
</CustomField>