fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Based_on_your_shift_estimate_the_numbe__c.field-meta.xml
<CustomField>
    <fullName>Based_on_your_shift_estimate_the_numbe__c</fullName>
    <label>Based on your shift, estimate the  numbe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>21+</fullName>
            </value>
            <value>
                <fullName>Unable to estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>