fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Retail</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Independent Retail</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Resellers</fullName>
            </value>
            <value>
                <fullName>Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Interventional Access</fullName>
            </value>
            <value>
                <fullName>LMA</fullName>
            </value>
            <value>
                <fullName>Specialty Markets</fullName>
            </value>
            <value>
                <fullName>Vidacare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>