fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Business_Unit_Check__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Check__c</fullName>
    <formula>AND(
TEXT(Business_Unit__c) =  Zip_Code_Business_Unit__c,
NOT(ISBLANK(TEXT(Business_Unit__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Check</label>
    <type>Checkbox</type>
</CustomField>