fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Confidence_with_OnControl_System__c.field-meta.xml
<CustomField>
    <fullName>Confidence_with_OnControl_System__c</fullName>
    <label>Confidence with OnControl System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>