fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Empty_Approver_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Empty_Approver_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empty Approver Notification Sent</label>
    <type>Checkbox</type>
</CustomField>