fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Estimate_the_number_of_bone_marrow_aspir__c.field-meta.xml
<CustomField>
    <fullName>Estimate_the_number_of_bone_marrow_aspir__c</fullName>
    <label>Estimate the number of bone marrow aspir</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>21+</fullName>
            </value>
            <value>
                <fullName>Unable to estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>