fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Form_Results_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Results_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://www.formstack.com/admin/submission/view/&quot; &amp;   Lab_Unique_ID__c  , &quot;Click to view form results&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Results URL</label>
    <type>Text</type>
</CustomField>