fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Hemorrhage_Track__c.field-meta.xml
<CustomField>
    <fullName>Hemorrhage_Track__c</fullName>
    <label>Hemorrhage Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>