fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Hospital_Agency__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Agency__c</fullName>
    <label>Hospital/Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>