fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/How_many_times_in_past_month_have_you_pr__c.field-meta.xml
<CustomField>
    <fullName>How_many_times_in_past_month_have_you_pr__c</fullName>
    <label>How many times in past month have you pr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>21+</fullName>
            </value>
            <value>
                <fullName>Unable to estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>