fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Interventional_Track__c.field-meta.xml
<CustomField>
    <fullName>Interventional_Track__c</fullName>
    <label>Interventional Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>