fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>Lab Participants</relationshipLabel>
    <relationshipName>Lab_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>