fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab_Participant_Number__c.field-meta.xml
<CustomField>
    <fullName>Lab_Participant_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Lab Participant Number</label>
    <type>AutoNumber</type>
</CustomField>