fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Lab_Time_2__c</fullName>
    <description>Used for labs when EZIO and Airway are offered - this time defines the time selected for the Airway lab.</description>
    <inlineHelpText>For labs when EZIO and Airway are offered - this time defines the time selected for the Airway lab.</inlineHelpText>
    <label>EZ-IO Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>