fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab_Time__c.field-meta.xml
<CustomField>
    <fullName>Lab_Time__c</fullName>
    <label>Airway Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>