fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab_Time_Hospital_Provider__c.field-meta.xml
<CustomField>
    <fullName>Lab_Time_Hospital_Provider__c</fullName>
    <label>Lab Time - Hospital Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>