fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab_Time_Interventional_Providers__c.field-meta.xml
<CustomField>
    <fullName>Lab_Time_Interventional_Providers__c</fullName>
    <label>Lab Time - Interventional Providers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>