fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lab_Times__c.field-meta.xml
<CustomField>
    <fullName>Lab_Times__c</fullName>
    <formula>IF(ISBLANK( Lab_Time_2__c), &apos;&apos;, &apos;EZ-IO Track: &apos;+Lab_Time_2__c+ BR())+
IF(ISBLANK( Hemorrhage_Track__c), &apos;&apos;, &apos;Hemorrhage Track: &apos;+Hemorrhage_Track__c+ BR())+
IF(ISBLANK( Interventional_Track__c), &apos;&apos;, &apos;Interventional Track: &apos;+Interventional_Track__c+ BR())</formula>
    <label>Lab Times</label>
    <type>Text</type>
</CustomField>