fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lab Participants</relationshipLabel>
    <relationshipName>Lab_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>