fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Lead_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Zip_Code__c</fullName>
    <formula>LEFT(Lead__r.PostalCode, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Zip Code</label>
    <type>Text</type>
</CustomField>