fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/License_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Certificate_Number__c</fullName>
    <label>License/Certificate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>