fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Licensure_Certificate_Country__c.field-meta.xml
<CustomField>
    <fullName>Licensure_Certificate_Country__c</fullName>
    <label>Licensure/Certificate Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>