fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Loc_Temp__c.field-meta.xml
<CustomField>
    <fullName>Loc_Temp__c</fullName>
    <label>Loc Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>