fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <description>Mailing_Country__c</description>
    <label>Mailing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>