fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Mailing_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Address_2__c</fullName>
    <label>Mailing Street Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>