fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Code__c</fullName>
    <label>Mailing Zip Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>