fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>