fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Place_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Employment__c</fullName>
    <label>Place of Employment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>