fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Send_Lab_Acceptance_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Lab_Acceptance_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Lab Acceptance Email</label>
    <type>Checkbox</type>
</CustomField>