fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Signed_up_for_Hemorrhage__c.field-meta.xml
<CustomField>
    <fullName>Signed_up_for_Hemorrhage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed up for Hemorrhage</label>
    <type>Checkbox</type>
</CustomField>