fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Status_for_Hemorrhage__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Hemorrhage__c</fullName>
    <label>Status for Hemorrhage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>