fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Stop_1_week_lab_notification__c.field-meta.xml
<CustomField>
    <fullName>Stop_1_week_lab_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop 1 week Lab Notification</label>
    <type>Checkbox</type>
</CustomField>