fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Target_Profile_TP_Range__c.field-meta.xml
<CustomField>
    <fullName>Target_Profile_TP_Range__c</fullName>
    <label>Target Profile TP Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>