fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Territory_Based_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_Based_Owner_ID__c</fullName>
    <formula>Lead__r.Territory_Based_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Based Owner ID</label>
    <type>Text</type>
</CustomField>