fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Time_Slot_Test__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot_Test__c</fullName>
    <label>Time Slot Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>