fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Type_of_Licensure_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Licensure_Certificate__c</fullName>
    <label>Type of Licensure/Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMR</fullName>
            </value>
            <value>
                <fullName>EMT, EMT-B</fullName>
            </value>
            <value>
                <fullName>AEMT</fullName>
            </value>
            <value>
                <fullName>EMT-Int</fullName>
            </value>
            <value>
                <fullName>EMT-P, NREMTP, Paramedic</fullName>
            </value>
            <value>
                <fullName>MD, DO</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>RRT</fullName>
            </value>
            <value>
                <fullName>CRNA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Licensure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>