fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted__c</fullName>
    <formula>FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNU Waitlisted</label>
    <type>Checkbox</type>
</CustomField>