fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Walkin_EZ_IO__c.field-meta.xml
<CustomField>
    <fullName>Walkin_EZ_IO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Particpant walkedin for EZ-IO.</description>
    <inlineHelpText>Particpant walkedin for EZ-IO.</inlineHelpText>
    <label>Walkin EZ-IO</label>
    <type>Checkbox</type>
</CustomField>