fullSandbox11072023/force-app/main/default/objects/Lab_Participant__c/fields/Walkin_Hemorrhage__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Hemorrhage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walkin Hemorrhage</label>
    <type>Checkbox</type>
</CustomField>